# models/index.js
@@ -3,19 +3,20 @@
 const Product = require('./product')
 const User = require('./user')
 const Cart = require('./cart')
+const CartItem = require('./cartItem')
 const setData = require('../setData')
 const setUser = require('../setUser')
 
 async function init() {
   User.hasOne(Cart, {foreignKey: "UserID"})
-  Cart.belongsTo(User, {foreignKey: "UserID"})
 
-  Cart.hasMany(Product, {foreignKey: "CartID"})
-  Product.belongsTo(Cart, {foreignKey: "CartID"})
+  Cart.hasMany(CartItem, {foreignKey: "CartID"})
+  Product.hasMany(CartItem, {foreignKey: "ProductID"})
 
-  await Product.sync()
   await User.sync()
   await Cart.sync()
+  await Product.sync()
+  await CartItem.sync()
   await setData(Product)
   await setUser(User)
 };
@@ -24,5 +25,7 @@ init();
 
 module.exports = {
   Product,
-  User
+  User,
+  Cart,
+  CartItem
 }
