# routes/cartRoutes.js
@@ -3,19 +3,15 @@ const router = express.Router();
 const Controllers = require("../controllers");
 
 router.get('/', (req, res) => {
-  Controllers.cartController.getUser(res);
+  Controllers.cartController.getCart(res);
 })
 
-router.post('/create', (req, res) => {
-  Controllers.cartController.createUser(req.body, res)
-})
-
-router.put('/:id', (req, res) => {
-  Controllers.cartController.updateUser(req, res)
+router.post('/create/:user_id', (req, res) => {
+  Controllers.cartController.createCart(req.params.user_id, res)
 })
 
 router.delete('/:id', (req, res) => {
-  Controllers.cartController.deleteUser(req, res)
+  Controllers.cartController.deleteCart(req, res)
 })
 
 module.exports = router;
